# rubik

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  drawLine.cpp  drawQuad.cpp  fragment.glsl  matrix.cpp  rect.cpp  triangle.cpp  util.h  vertex.glsl
cmake/: Util.cmake
examples/: CMakeLists.txt
examples/2dDraw/: CMakeLists.txt  rect.cpp  triangle.cpp
examples/texture/: CMakeLists.txt  imageTexture.cpp
exercise/: CMakeLists.txt  twotriangles.cpp
shaders/: fragment_uniform.glsl  vertex.glsl  vertex_uniform.glsl
src/: CMakeLists.txt  config.h  matrix.h  util.cpp
